New PaintController under-invalidation checking

This is a follow-up of https://codereview.chromium.org/2107103002/
which broke the original under-invalidation checking in
PaintController.

BUG=596983,510908

Review-Url: https://codereview.chromium.org/2114653003
Cr-Commit-Position: refs/heads/master@{#405805}

Former-commit-id: 63b12484f2c59ba177a21aba09b8a4edd38e6ea1